CSD-NETWORK.yml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: 'This Template will create VPC, Subnet and resources needed for VPC  '
Parameters:
  Env:
    Description: Environment Suffix
    Type: String
  ProjectName:
    Description: Enter the Project name
    Type: String
  EnvironmentName:
    Description: The Name of Environment
    Type: String
    AllowedValues:
    - Development
    - Staging
    - Production
  CIDR:
    Description: The IP address range that you'll use for your VPC
    Default: 10.160.160.0/18
    Type: String
  ServerlessCidrBlock1:
    Description: The IP address range for Serverless Subnet 1
    Type: String
    Default: 10.160.160.0/23
  ServerlessCidrBlock2:
    Description: The IP address range for Serverless Subnet 2
    Type: String
    Default: 10.160.162.0/23
  ContainerCidrBlock1:
    Description: The IP address range for Container Subnet 1
    Type: String
    Default: 10.160.164.0/23
  ContainerCidrBlock2:
    Description: The IP address range for Container Subnet 2
    Type: String
    Default: 10.160.166.0/23
  WanCidrBlock1:
    Description: The IP address range for PUBLIC Subnet 1
    Type: String
    Default: 10.160.168.0/23
  WanCidrBlock2:
    Description: The IP address range for PUBLIC Subnet 2
    Type: String
    Default: 10.160.170.0/23
  DbCidrBlock1:
    Description: The IP address range for Db Subnet 1
    Type: String
    Default: 10.160.172.0/23
  DbCidrBlock2:
    Description: The IP address range for Db Subnet 2
    Type: String
    Default: 10.160.174.0/23
  DaxCidrBlock1:
    Description: The IP address range for Dax Subnet 1
    Type: String
    Default: 10.160.176.0/23
  DaxCidrBlock2:
    Description: The IP address range for Dax Subnet 2
    Type: String
    Default: 10.160.178.0/23
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock:
        Ref: CIDR
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      InstanceTenancy: default
      Tags:
      - Key: Project
        Value:
          Ref: ProjectName
      - Key: Environment
        Value:
          Ref: EnvironmentName
      - Key: Owner
        Value: OCS
      - Key: Application
        Value: opsTool-POC
      - Key: Name
        Value: CSD-POC-VPC
  ServerlessSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock:
        Ref: ServerlessCidrBlock1
      MapPublicIpOnLaunch: 'true'
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      Tags:
      - Key: Project
        Value:
          Ref: ProjectName
      - Key: Environment
        Value:
          Ref: EnvironmentName
      - Key: Name
        Value: CSD-POC-SERVERLESS-SUBNET-1A
  ServerlessSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock:
        Ref: ServerlessCidrBlock2
      MapPublicIpOnLaunch: 'true'
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      Tags:
      - Key: Project
        Value:
          Ref: ProjectName
      - Key: Environment
        Value:
          Ref: EnvironmentName
      - Key: Name
        Value: CSD-POC-SERVERLESS-SUBNET-1B
  WanSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock:
        Ref: WanCidrBlock1
      MapPublicIpOnLaunch: 'true'
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      Tags:
      - Key: Project
        Value:
          Ref: ProjectName
      - Key: Environment
        Value:
          Ref: EnvironmentName
      - Key: Name
        Value: CSD-POC-PUBLIC-SUBNET-1A
  WanSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock:
        Ref: WanCidrBlock2
      MapPublicIpOnLaunch: 'true'
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      Tags:
      - Key: Project
        Value:
          Ref: ProjectName
      - Key: Environment
        Value:
          Ref: EnvironmentName
      - Key: Name
        Value: CSD-POC-PUBLIC-SUBNET-1B
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Project
        Value:
          Ref: ProjectName
      - Key: Environment
        Value:
          Ref: EnvironmentName
      - Key: Name
        Value: CSD-POC-IGW
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: VPC
      InternetGatewayId:
        Ref: InternetGateway   
  EIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
      - Key: Name
        Value: CSD-POC-NATGW-IP1
      - Key: Project
        Value:
          Ref: ProjectName
      - Key: Environment
        Value:
          Ref: EnvironmentName
      - Key: Owner
        Value: OCS
      - Key: Application
        Value: opsTool-POC        
  EIP2:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
      - Key: Name
        Value: CSD-POC-NATGW-IP2
      - Key: Project
        Value:
          Ref: ProjectName
      - Key: Environment
        Value:
          Ref: EnvironmentName
      - Key: Owner
        Value: OCS
      - Key: Application
        Value: opsTool-POC 
  NATSubnet1:
    DependsOn: AttachGateway
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
        - EIP
        - AllocationId
      SubnetId:
        Ref: ServerlessSubnet1
      Tags:
      - Key: Name
        Value: CSD-POC-NATGW-1A
      - Key: Project
        Value:
          Ref: ProjectName
      - Key: Environment
        Value:
          Ref: EnvironmentName
      - Key: Owner
        Value: OCS
      - Key: Application
        Value: opsTool-POC         
  ServerlessRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Project
        Value:
          Ref: ProjectName
      - Key: Environment
        Value:
          Ref: EnvironmentName
      - Key: Name
        Value: CSD-POC-SERVERLESS-RT
      - Key: Owner
        Value: OCS
      - Key: Application
        Value: opsTool-POC          
  ServerlessRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId:
        Ref: ServerlessRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: InternetGateway        
  DaxRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Project
        Value:
          Ref: ProjectName
      - Key: Environment
        Value:
          Ref: EnvironmentName
      - Key: Name
        Value: CSD-POC-DAX-RT
      - Key: Owner
        Value: OCS
      - Key: Application
        Value: opsTool-POC         
  DaxRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId:
        Ref: DaxRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: InternetGateway
  WanRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Project
        Value:
          Ref: ProjectName
      - Key: Environment
        Value:
          Ref: EnvironmentName
      - Key: Name
        Value: CSD-POC-PUBLIC-RT
      - Key: Owner
        Value: OCS
      - Key: Application
        Value: opsTool-POC         
  WanRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId:
        Ref: WanRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: NATSubnet1
  ServerlessSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: ServerlessSubnet1
      RouteTableId:
        Ref: ServerlessRouteTable
  ServerlessSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: ServerlessSubnet2
      RouteTableId:
        Ref: ServerlessRouteTable
  DaxSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: DaxSubnet1
      RouteTableId:
        Ref: DaxRouteTable
  DaxSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: DaxSubnet2
      RouteTableId:
        Ref: DaxRouteTable
  WanSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: WanSubnet1
      RouteTableId:
        Ref: WanRouteTable
  WanSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: WanSubnet2
      RouteTableId:
        Ref: WanRouteTable
  PublicNetworkAcl:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Project
        Value:
          Ref: ProjectName
      - Key: Environment
        Value:
          Ref: EnvironmentName
      - Key: Name
        Value: CSD-POC-Public-ACL
      - Key: Owner
        Value: OCS
      - Key: Application
        Value: opsTool-POC 
  ServerlessSubnetNetworkAclAssociation1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId:
        Ref: ServerlessSubnet1
      NetworkAclId:
        Ref: PublicNetworkAcl
  ServerlessSubnetNetworkAclAssociation2:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId:
        Ref: ServerlessSubnet2
      NetworkAclId:
        Ref: PublicNetworkAcl
  WanSubnetNetworkAclAssociation1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId:
        Ref: WanSubnet1
      NetworkAclId:
        Ref: PublicNetworkAcl
  WanSubnetNetworkAclAssociation2:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId:
        Ref: WanSubnet2
      NetworkAclId:
        Ref: PublicNetworkAcl
  ContainerSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock:
        Ref: ContainerCidrBlock1
      MapPublicIpOnLaunch: 'false'
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      Tags:
      - Key: Project
        Value:
          Ref: ProjectName
      - Key: Environment
        Value:
          Ref: EnvironmentName
      - Key: Name
        Value: CSD-POC-CONTAINER-SUBNET-1A
      - Key: Owner
        Value: OCS
      - Key: Application
        Value: opsTool-POC 
  ContainerSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock:
        Ref: ContainerCidrBlock2
      MapPublicIpOnLaunch: 'false'
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      Tags:
      - Key: Project
        Value:
          Ref: ProjectName
      - Key: Environment
        Value:
          Ref: EnvironmentName
      - Key: Name
        Value: CSD-POC-CONTAINER-SUBNET-1B
      - Key: Owner
        Value: OCS
      - Key: Application
        Value: opsTool-POC 
  DbSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock:
        Ref: DbCidrBlock1
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      Tags:
      - Key: Project
        Value:
          Ref: ProjectName
      - Key: Environment
        Value:
          Ref: EnvironmentName
      - Key: Name
        Value: CSD-POC-DB-SUBNET-1A
      - Key: Owner
        Value: OCS
      - Key: Application
        Value: opsTool-POC 
  DbSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock:
        Ref: DbCidrBlock2
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      Tags:
      - Key: Project
        Value:
          Ref: ProjectName
      - Key: Environment
        Value:
          Ref: EnvironmentName
      - Key: Name
        Value: CSD-POC-DB-SUBNET-1A
      - Key: Owner
        Value: OCS
      - Key: Application
        Value: opsTool-POC 
  DaxSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock: 
        Ref: DaxCidrBlock1
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      Tags:
      - Key: Project
        Value:
          Ref: ProjectName
      - Key: Environment
        Value:
          Ref: EnvironmentName
      - Key: Name
        Value: CSD-POC-DAX-SUBNET-1A
      - Key: Owner
        Value: OCS
      - Key: Application
        Value: opsTool-POC           
  DaxSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      CidrBlock: 
        Ref: DaxCidrBlock2        
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      Tags:
      - Key: Project
        Value:
          Ref: ProjectName
      - Key: Environment
        Value:
          Ref: EnvironmentName
      - Key: Name
        Value: CSD-POC-DAX-SUBNET-1A
      - Key: Owner
        Value: OCS
      - Key: Application
        Value: opsTool-POC           
  ContainerPrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Project
        Value:
          Ref: ProjectName
      - Key: Environment
        Value:
          Ref: EnvironmentName
      - Key: Network
        Value: Private
      - Key: Name
        Value: CSD-POC-CONTAINER-RT-1A
      - Key: Owner
        Value: OCS
      - Key: Application
        Value: opsTool-POC 
  ContainerPrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Project
        Value:
          Ref: ProjectName
      - Key: Environment
        Value:
          Ref: EnvironmentName
      - Key: Network
        Value: Private
      - Key: Name
        Value: CSD-POC-CONTAINER-RT-1B
      - Key: Owner
        Value: OCS
      - Key: Application
        Value: opsTool-POC 
  DbPrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Project
        Value:
          Ref: ProjectName
      - Key: Environment
        Value:
          Ref: EnvironmentName
      - Key: Network
        Value: Private
      - Key: Name
        Value: CSD-POC-DB-RT
      - Key: Owner
        Value: OCS
      - Key: Application
        Value: opsTool-POC 
  ContainerSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: ContainerSubnet1
      RouteTableId:
        Ref: ContainerPrivateRouteTable
  ContainerSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: ContainerSubnet2
      RouteTableId:
        Ref: ContainerPrivateRouteTable1
  DbSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: DbSubnet1
      RouteTableId:
        Ref: DbPrivateRouteTable
  DbSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: DbSubnet2
      RouteTableId:
        Ref: DbPrivateRouteTable
  NATSubnet1RouteTableAssociation:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: ContainerPrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: NATSubnet1
  NATSubnet2RouteTableAssociation:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: ContainerPrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: NATSubnet1
  PrivateNetworkAcl:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Project
        Value:
          Ref: ProjectName
      - Key: Environment
        Value:
          Ref: EnvironmentName
      - Key: Name
        Value: CSD-POC-Private-ACL
      - Key: Owner
        Value: OCS
      - Key: Application
        Value: opsTool-POC 
  ContainerSubnetNetworkAclAssociation1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId:
        Ref: ContainerSubnet1
      NetworkAclId:
        Ref: PrivateNetworkAcl
  ContainerSubnetNetworkAclAssociation2:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId:
        Ref: ContainerSubnet2
      NetworkAclId:
        Ref: PrivateNetworkAcl
  DbSubnetNetworkAclAssociation1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId:
        Ref: DbSubnet1
      NetworkAclId:
        Ref: PrivateNetworkAcl
  DbSubnetNetworkAclAssociation2:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId:
        Ref: DbSubnet2
      NetworkAclId:
        Ref: PrivateNetworkAcl
  NetworkAclEntry1:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: 'true'
      Protocol: "-1"
      RuleAction: allow
      RuleNumber: '100'
      NetworkAclId:
        Ref: PublicNetworkAcl
  NetworkAclEntry2:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Protocol: "-1"
      RuleAction: allow
      RuleNumber: '100'
      NetworkAclId:
        Ref: PublicNetworkAcl
  NetworkAclEntry3:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: 'true'
      Protocol: "-1"
      RuleAction: allow
      RuleNumber: '100'
      NetworkAclId:
        Ref: PrivateNetworkAcl
  NetworkAclEntry4:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Protocol: "-1"
      RuleAction: allow
      RuleNumber: '100'
      NetworkAclId:
        Ref: PrivateNetworkAcl
  ServerlessServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: CSD-POC-SERVERLESS-SG
      GroupDescription: Enable HTTP ingress
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: CSD-POC-SERVERLESS-SG
      - Key: Owner
        Value: OCS
      - Key: Application
        Value: opsTool-POC 
      - Key: Project
        Value:
          Ref: ProjectName
      - Key: Environment
        Value:
          Ref: EnvironmentName
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        CidrIp: 0.0.0.0/0
  ContainerServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: CSD-POC-CONTAINER-SG
      GroupDescription: Enable HTTP ingress
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: CSD-POC-CONTAINER-SG
      - Key: Owner
        Value: OCS
      - Key: Application
        Value: opsTool-POC 
      - Key: Project
        Value:
          Ref: ProjectName
      - Key: Environment
        Value:
          Ref: EnvironmentName        
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        CidrIp: 0.0.0.0/0
  WanServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: CSD-POC-PUBLIC-SG
      GroupDescription: Enable HTTP ingress
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: CSD-POC-PUBLIC-SG
      - Key: Owner
        Value: OCS
      - Key: Application
        Value: opsTool-POC 
      - Key: Project
        Value:
          Ref: ProjectName
      - Key: Environment
        Value:
          Ref: EnvironmentName        
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIpv6: "::/0"
  DbServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: CSD-POC-DB-SG
      GroupDescription: Enable HTTP ingress
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: CSD-POC-DB-SG
      - Key: Owner
        Value: OCS
      - Key: Application
        Value: opsTool-POC 
      - Key: Project
        Value:
          Ref: ProjectName
      - Key: Environment
        Value:
          Ref: EnvironmentName        
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        CidrIp: 0.0.0.0/0
  InternalSSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: CSD-POC-SSH-SG
      GroupDescription: Enable HTTP ingress
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: CSD-POC-SSH-SG
      - Key: Owner
        Value: OCS
      - Key: Application
        Value: opsTool-POC 
      - Key: Project
        Value:
          Ref: ProjectName
      - Key: Environment
        Value:
          Ref: EnvironmentName        
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: 0.0.0.0/0

Outputs:
  VpcId:
    Description: VPCId of the newly created VPC
    Value:
      Ref: VPC
    Export:
      Name:
        Fn::Sub: "CsdNetwork-VpcId"
  DaxSubnet1Id:
    Description: SubnetId of the Dax subnet1
    Value:
      Ref: DaxSubnet1
    Export:
      Name:
        Fn::Sub: "CsdNetwork-DaxSubnet1Id"
  DaxSubnet2Id:
    Description: SubnetId of the Dax subnet2
    Value:
      Ref: DaxSubnet2
    Export:
      Name:
        Fn::Sub: "CsdNetwork-DaxSubnet2Id"
  DbSubnet1Id:
    Description: SubnetId of the DB Subnet1
    Value: 
      Ref: DbSubnet1
    Export:
      Name:
        Fn::Sub: "CsdNetwork-DbSubnet1Id"
  DbSubnet2Id:
    Description: SubnetId of the DB Subnet2
    Value:
      Ref: DbSubnet2
    Export:
      Name:
        Fn::Sub: "CsdNetwork-DbSubnet2Id"
  ContainerSubnet1Id:
    Description: SubnetId of the Container Subnet1
    Value:
      Ref: ContainerSubnet1
    Export:
      Name:
        Fn::Sub: "CsdNetwork-ContainerSubnet1Id"    
  ContainerSubnet2Id:
    Description: SubnetId of the Container Subnet2
    Value: 
      Ref: ContainerSubnet2
    Export:
      Name:
        Fn::Sub: "CsdNetwork-ContainerSubnet2Id"
  NATSubnet1Id:
    Description: SubnetId of the NAT Subnet1
    Value:
      Ref: NATSubnet1
    Export:
      Name:
        Fn::Sub: "CsdNetwork-NATSubnet1Id"
  WanSubnet1Id:
    Description: SubnetId of the Wan Subnet1
    Value:
      Ref: WanSubnet1
    Export:
      Name:
        Fn::Sub: "CsdNetwork-WanSubnet1Id"
  WanSubnet2Id:
    Description: SubnetId of the Wan subnet2
    Value:
      Ref: WanSubnet2 
    Export:
      Name:
        Fn::Sub: "CsdNetwork-WanSubnet2Id" 
  ServerlessSubnet1Id:
    Description: SubnetId of the Serverless subnet1
    Value:
      Ref: ServerlessSubnet1
    Export:
      Name:
        Fn::Sub: "CsdNetwork-ServerlessSubnet1Id"
  ServerlessSubnet2Id:
    Description: SubnetId of the Serverless subnet2
    Value:
      Ref: ServerlessSubnet2   
    Export:
      Name:
        Fn::Sub: "CsdNetwork-ServerlessSubnet2Id"   
  ServerlessSecurityGroup:
    Description: SecurityGroup for Serverless subnet
    Value:
      Ref: ServerlessServerSecurityGroup
    Export:
      Name:
        Fn::Sub: "CsdNetwork-ServerlessSecurityGroup"  
  ContainerSecurityGroup:
    Description: SecurityGroup for Container Subnet
    Value:
      Ref: ContainerServerSecurityGroup
    Export:
      Name:
        Fn::Sub: "CsdNetwork-ContainerSecurityGroup" 
  WanSecurityGroup:
    Description: SecurityGroup for WAN subnet
    Value:
      Ref: WanServerSecurityGroup
    Export:
      Name:
        Fn::Sub: "CsdNetwork-WanSecurityGroup" 
  DbSecurityGroup:
    Description: SecurityGroup for Db subnet
    Value:
      Ref: DbServerSecurityGroup
    Export:
      Name:
        Fn::Sub: "CsdNetwork-DbSecurityGroup" 
  SshSecurityGroup:
    Description: SecurityGroup for Internal Ssh 
    Value:
      Ref: InternalSSHSecurityGroup  
    Export:
      Name:
        Fn::Sub: "CsdNetwork-SshSecurityGroup"
